# ESSD_AI_Competition_1

./: .gitignore  AI Competition Week 2 Resources.docx  CLAUDE.md  ESSD AI Challenge – Week 5 Info Session.pptx  ESSD AI Competition - Week 3_delibverable.docx  Evergreen Analyzers Week 1 deliverables.docx  Incubator_Noodling.docx  Nino_LLM_Chat_GPT-4.1.txt  README.md  SubSignal_week5_presentation.pptx  TerraTrendersReadMe.md  Week 1 Conglomerate.docx  Week 2 submission.docx  ai_delinquents_week_1_deliverable.md  ai_delinquents_week_2_deliverable.md  gather_data.py  gpt_chat_history_2026-03-23.md  idea1_claude_chat_history_2026-03-20.md  idea1_dam_removal_risk.md  idea1_dam_removal_risk_plan.gpt.md  idea1_gpt_chat_history_2026-03-23.md  idea1_initial_prompt.md  idea2_inital_prompt.md  idea_water_supply_forecast.md  initial_prompt.md  pyproject.toml  requirements.txt  requirements_minimal.txt  technical_workflow_plan.md  week-2-plan.md  week_2_resources.md
ai_delinquents/: README.md  Week_4_Instructions  ai_delinquents_week_2_deliverable.md  pyproject.toml  requirements.txt  week_2_resources.md
ai_delinquents/ideas/: idea1_dam_removal_risk_plan.claude.md  idea2_fires_and_hydropower_agent.md  idea2_fires_and_hydropower_plan.md
ai_delinquents/models/: xgb_final.json  xgb_q10_final.json  xgb_q90_final.json
ai_delinquents/outputs/: loyo_cv_predictions.csv  metrics_summary.csv  model_performance_summary.txt
ai_delinquents/scripts/: 01_download_data.py  02_clean_data.py  03_feature_engineering.py  train.py
ai_delinquents/week_3_files/: README.md  requirements.txt  (+2 more)
(+851 files in other folders)
