[project]
authors = [{name = "Cam Bracken", email = "cameron.bracken@pnnl.gov"}]
dependencies = []
name = "ESSD_AI_Competition_1"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
essd_ai_competition_1 = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=3.0.2,<4"
numpy = ">=1.24"
xgboost = ">=2.0"
scikit-learn = ">=1.8.0,<2"
matplotlib = ">=3.10.8,<4"
plotly = ">=6.6.0,<7"
dataretrieval = ">=1.1.2,<2"
requests = ">=2.33.1,<3"
properscoring = ">=0.1,<0.2"
optuna = ">=4.8.0,<5"
openpyxl = ">=3.1.5,<4"
seaborn = ">=0.13.2,<0.14"
